# liberland-vote-scope

./: Cargo.toml  Dockerfile  README.md
artifacts/: dev.scale  mainnet.scale
docs/: DEPLOYMENT.md  NOTES.md  elections-report-20250319.md  elections-report-jan2025.md
patch/npos-elections/: Cargo.toml
patch/npos-elections/src/: lib.rs  phragmen.rs  tracing.rs
src/: api.rs  main.rs  markdown.rs  onchain.rs  phragmen.rs  traits.rs  types.rs
src/types/: api.rs  mod.rs
