[package]
name = "liberland-vote-scope"
version = "0.1.0"
edition = "2024"

[patch."https://github.com/paritytech/polkadot-sdk"]
sp-npos-elections = { path = "patch/npos-elections" }

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
sp-arithmetic = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-npos-elections = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
subxt = "0.41.0"
subxt-signer = "0.41.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
